--- a/3d_virtual_keyboard/index.html
+++ b/3d_virtual_keyboard/index.html
@@ -24,7 +24,7 @@
         <div class="key" data-key="0">0</div>
         <div class="key" data-key="-">-</div>
         <div class="key" data-key="=">=</div>
-        <div class="key backspace" data-key="Backspace">Backspace</div>
+        <div class="key backspace" data-key="Backspace">BS</div>
       </div>
       <div class="row">
         <div class="key tab" data-key="Tab">Tab</div>
@@ -76,6 +76,10 @@
       </div>
     </div>
   </div>
+
+  <footer>
+    <p>Copyright ©2025 All rights reserved by Talha Tarique</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
